[metadata]
name = nionswift-hyperspy
version = 0.1.0
author = Nion Software
author_email = swift@nion.com
description = Library and UI for using HyperSpy with Nion Swift.
long_description = file: README.rst, CHANGES.rst, LICENSE
url = https://github.com/nion-software/nionswift-hyperspy
license = GPL-3.0-only
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find_namespace:
python_requires = ~=3.7
install_requires =
    hyperspy

[options.packages.find]
include =
    nion
    nion.hyperspy
    nionswift_plugin
    nionswift_plugin.nion_hyperspy
